ligolang/src/test/contracts/negative/interpreter_tests/bad_balances_reset.mligo
let test = Test.reset_state 2n [4000tez;4000tez]